--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.202.5/containers/typescript-node
 {
-    "name": "Truepill Telehealth Lite",
+    "name": "Truepill PDF Conversion Service",
     "dockerComposeFile": "docker-compose.yaml",
     "service": "devcontainer",
     "runServices": [],
