--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.202.5/containers/typescript-node
 {
-    "name": "Truepill PDF Conversion Service",
+    "name": "Truepill pdf converter",
     "dockerComposeFile": "docker-compose.yaml",
     "service": "devcontainer",
     "runServices": [],
@@ -9,8 +9,6 @@
     "features": {
         "docker-from-docker": "latest",
         "terraform": "latest",
-        "truepill-tyler-benfield/vscode-feature-gcloud/google-cloud-sdk": "369.0.0",
-        "truepill-tyler-benfield/vscode-feature-gcloud/google-cloud-sql-auth-proxy": "latest"
     },
     // Set *default* container specific settings.json values on container create.
     "settings": {
@@ -20,17 +18,16 @@
     "extensions": [
         "dbaeumer.vscode-eslint",
         "esbenp.prettier-vscode",
-        "graphql.vscode-graphql",
         "hashicorp.terraform",
         "mikestead.dotenv",
         "ms-azuretools.vscode-docker"
     ],
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
     "forwardPorts": [
-        3005
+        3000,
     ],
     "portsAttributes": {
-        "3005": {
+        "3000": {
             "label": "Web",
             "onAutoForward": "openBrowser"
         },
