--- a/.devcontainer/dockerfile
+++ b/.devcontainer/dockerfile
@@ -1,21 +1,37 @@
-FROM node:16-alpine
+FROM alpine
 
-# Puppeteer downloaded chromium will not work on Alpine
-ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
-    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
+WORKDIR /app
+RUN pwd
 
-# Install chromium and support packages, add "puppeteer" user
-RUN apk add --no-cache chromium \
+# Installs latest Chromium (92) package.
+RUN apk add --no-cache \
+    chromium \
+    bash \
     nss \
     freetype \
     harfbuzz \
     ca-certificates \
-    ttf-freefont && \
-    adduser -h /app -D puppeteer
+    ttf-freefont \
+    nodejs \
+    yarn
 
-WORKDIR /app
 
-# Prevent sandboxing from being required
-USER puppeteer
+# Tell Puppeteer to skip installing Chrome. We'll be using the installed package.
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
+    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
 
-RUN npm i puppeteer@v10.2.0
+# Puppeteer v10.0.0 works with Chromium 92.
+RUN yarn add puppeteer@10.0.0
+
+# Add user so we don't need --no-sandbox.
+RUN addgroup -S pptruser && adduser -S -g pptruser pptruser \
+    && mkdir -p /home/pptruser/Downloads /app \
+    && chown -R pptruser:pptruser /home/pptruser \
+    && chown -R pptruser:pptruser /app
+
+# Run everything after as non-privileged user.
+USER pptruser
+
+COPY . /app
+
+RUN yarn install
