--- a/.devcontainer/dockerfile
+++ b/.devcontainer/dockerfile
@@ -1,19 +1,29 @@
-FROM alpine
+FROM mcr.microsoft.com/vscode/devcontainers/base:ubuntu
 
+ENV SHELL /bin/sh
+RUN echo 'hello world'
 WORKDIR /app
 RUN pwd
 
 # Installs latest Chromium (92) package.
-RUN apk add --no-cache \
-    chromium \
-    bash \
-    nss \
-    freetype \
-    harfbuzz \
-    ca-certificates \
-    ttf-freefont \
-    nodejs \
-    yarn
+RUN apt update
+RUN apt remove cmdtest
+RUN apt remove yarn
+# RUN npm install yarn -g
+RUN apt install chromium-browser -y
+RUN apt install nodejs npm -y
+RUN npm install yarn -g
+# RUN apt install nodejs yarn -y
+# RUN apt-get install \
+#     chromium \
+#     bash \
+#     nss \
+#     freetype \
+#     harfbuzz \
+#     ca-certificates \
+#     ttf-freefont \
+#     nodejs \
+#     yarn
 
 
 # Tell Puppeteer to skip installing Chrome. We'll be using the installed package.
@@ -24,13 +34,13 @@ ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
 RUN yarn add puppeteer@10.0.0
 
 # Add user so we don't need --no-sandbox.
-RUN addgroup -S pptruser && adduser -S -g pptruser pptruser \
-    && mkdir -p /home/pptruser/Downloads /app \
-    && chown -R pptruser:pptruser /home/pptruser \
-    && chown -R pptruser:pptruser /app
+# RUN addgroup -S pptruser && adduser -S -g pptruser pptruser \
+#     && mkdir -p /home/pptruser/Downloads /app \
+#     && chown -R pptruser:pptruser /home/pptruser \
+#     && chown -R pptruser:pptruser /app
 
 # Run everything after as non-privileged user.
-USER pptruser
+# USER pptruser
 
 COPY . /app
 
