--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pdf-converter-service",
   "version": "0.0.0",
   "description": "Used to convert html to pdf",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/akaidanTP/pfd-conversion-service/issues"
   },
-  "homepage": "https://github.com/akaidanTP/pfd-conversion-service#readme"
+  "dependencies": {
+    "express": "^4.17.3",
+    "puppeteer": "10.0.0"
+  }
 }
