--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Used to convert html to pdf",
   "main": "src/index.js",
   "scripts": {
+    "start": "./node_modules/nodemon/bin/nodemon.js ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +19,8 @@
   "dependencies": {
     "express": "^4.17.3",
     "puppeteer": "10.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
