--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.3",
     "puppeteer": "10.0.0"
   },
+  "type": "module",
   "devDependencies": {
     "nodemon": "^2.0.15"
   }
